# mimic-discharge-env-v2

./: .dockerignore  .env.template  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  baseline_results.txt  blog.md  explanation.md  inference.py  mlflow.db  openenv.yaml  pyproject.toml  requirements.txt  smoke_test.py
environment/: __init__.py  env.py  episode_builder.py  models.py  old_episode_builder.py
environment/tasks/: __init__.py  task1_disposition.py  task2_careplan.py  task3_note.py  task4_workflow.py
logs/: training_20260424_134017_fresh.jsonl  training_20260426_134017_fresh.jsonl
mimic-iv-clinical-database-demo-2.2/: demo_subject_id.csv  preview.py  preview.txt
mimic-iv-clinical-database-demo-2.2/hosp/: admissions.csv  d_hcpcs.csv  d_icd_diagnoses.csv  d_icd_procedures.csv  d_labitems.csv  diagnoses_icd.csv  drgcodes.csv  emar.csv  emar_detail.csv  hcpcsevents.csv  labevents.csv  microbiologyevents.csv  omr.csv  patients.csv  pharmacy.csv  poe.csv  poe_detail.csv  prescriptions.csv  procedures_icd.csv  provider.csv  services.csv  transfers.csv
mimic-iv-clinical-database-demo-2.2/icu/: caregiver.csv  d_items.csv  datetimeevents.csv  icustays.csv  ingredientevents.csv  inputevents.csv  outputevents.csv  procedureevents.csv
server/: __init__.py  app.py
training/: rollout_collector.py  train_grpo.py
