[project]
name = "mimic-discharge-planning"
version = "2.0.0"
description = "MIMIC Discharge Planning OpenEnv — clinical RL benchmark"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "openai>=1.30.0",
    "boto3>=1.34.0",
    "google-genai>=1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["environment", "server"]

[tool.uv]
dev-dependencies = []